# StarTracker52

./: .gitignore  CMakeLists.txt  Makefile.files  Readme.md  ble.files  s140.ld  s340.ld  toolchain-arm-none-eabi.cmake
config/: FreeRTOSConfig.h  app_config.h  custom_board.h  sdk_config.h  sdk_config_ant.h  sdk_config_rtt.h
helpers/: assert_wrapper.h  helper.c  segger_wrapper.c  segger_wrapper.h  segger_wrapper_arm.h  task_manager_wrapper.h  task_manager_wrapper_arm.h
libraries/hardfault/: hardfault_implementation.c
libraries/jscope/: JScope.cpp  JScope.h
libraries/rtt/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
libraries/sysview/: SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_Config_NoOS.c  SYSVIEW_SpinMeter.txt
libraries/task_manager/: task_manager.c  task_manager.h
libraries/utils/: RingBuffer.h  WString.cpp  WString.h  millis.c  millis.h  ring_buffer.h  utils.c  utils.h
rf/: a6x_commands.h  app_ble_central.c  app_ble_central.h  app_ble_peripheral.c  app_ble_peripheral.h  ble_a6x.c  ble_a6x.h
sdk/: CMakeLists.txt
src/: Model.cpp  Model.h  main.c  parameters.h  uln2003.c  uln2003.h
src/scheduling/: a6x_handler.c  a6x_handler.h  power_scheduler.cpp  power_scheduler.h
